@@ -50,7 +50,7 @@
   </property>
   <property>
     <name>hbase.client.pause</name>
-    <value>30000</value>
+    <value>10000</value>
     <description>General client pause value.  Used mostly as value to wait
     before running a retry of a failed get, region lookup, etc.</description>
   </property>
@@ -102,7 +102,7 @@
   </property>
   <property>
     <name>hbase.regionserver.msginterval</name>
-    <value>10000</value>
+    <value>3000</value>
     <description>Interval between messages from the RegionServer to HMaster
     in milliseconds.  Default is 15. Set this value low if you want unit
     tests to be responsive.
