@@ -54,6 +54,7 @@ Trunk (unreleased changes)
                 (Izaak Rubin via Stack) 
     HADOOP-1835 Updated Documentation for HBase setup/installation
                 (Izaak Rubin via Stack)
+    HADOOP-1868 Make default configuration more responsive
 
 
 Below are the list of changes before 2007-08-18
